Fix client commmunication